# vk-xml-parser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dynamic_static.vk-xml-parser.cpp  vk-api-manifest-dump.cpp
cmake/: tinyxml2.cmake
documentation/: Doxyfile  README.md
include/dynamic_static/: vk-xml-parser.hpp
include/dynamic_static/vk-xml-parser/: element.hpp  enumeration.hpp  extension.hpp  function.hpp  handle.hpp  manifest.hpp  parameter.hpp  platform.hpp  structure.hpp  utilities.hpp  vendor.hpp
tests/: todo.cpp
